fix homepage layout bugs in IE6 and IE7

--- a/trunk/tongshare/public/stylesheets/application.css
+++ b/trunk/tongshare/public/stylesheets/application.css
@@ -79,6 +79,12 @@ root {
     float: left;
 }
 
+#login_button {
+    border: none;
+    display: block;
+    padding: 1px 13px 3px 13px;
+}
+
 .noticebar {
     margin-left: 50px;
 }
